# industrial-defect-detection

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  pyproject.toml  readme.md  requirements.txt  setup.py
datasets/: .gitkeep  README.md
docs/: thesis_paper.md
notebooks/: 00_data_exploration.ipynb  01_train_cae.ipynb  02_train_vae.ipynb  02_train_vae_v2.ipynb  03_train_denoising_ae.ipynb  04_train_cnn_classifier.ipynb  05_analysis_visualization.ipynb  06_cross_dataset_evaluation.ipynb  07_thesis_figures.ipynb  08_comprehensive_evaluation.ipynb
outputs/: cae_mvtec_results.csv  comprehensive_metrics_report.csv  dae_mvtec_results.csv  kolektor_generalization_results.csv  model_comparison.csv  thesis_summary_table.csv  vae_mvtec_results.csv
outputs/figures/: .gitkeep
outputs/logs/: .gitkeep
outputs/models/: .gitkeep
scripts/: evaluate_all_models.py  regenerate_figures.py
src/: __init__.py  config.py
src/data/: __init__.py  kolektor_dataset.py  mvtec_dataset.py  neu_dataset.py  transforms.py
src/evaluation/: __init__.py  metrics.py  visualization.py
src/models/: __init__.py  cae.py  cnn_classifier.py  denoising_ae.py  vae.py
src/training/: __init__.py  losses.py  trainer.py  vae_trainer.py
tests/: test_data_loading.py  verify_scheduler_fix.py
web/: README.md
web/backend/: README.md  inference.py  main.py  requirements.txt
web/frontend/: README.md  next.config.ts  package-lock.json  package.json
web/frontend/src/app/: layout.tsx  page.tsx
web/frontend/src/components/: ClientLayout.tsx  Footer.tsx  LoadingUI.tsx  Navbar.tsx
(+8 files in other folders)
